--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   pay: ^1.0.11
   shared_preferences: ^2.0.15
+  firebase_core: ^1.24.0
+  firebase_auth: ^3.11.2
+  firebase_database: ^9.1.7
 
 dev_dependencies:
   flutter_test:
