--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -39,6 +39,11 @@ dependencies:
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.2
   firebase_database: ^9.1.7
+  image_picker: ^0.8.6
+  firebase_messaging: ^13.1.0
+  firebase_storage: ^10.3.11
+  path_provider_android: ^2.0.21
+  path_provider_ios: ^2.0.11
 
 dev_dependencies:
   flutter_test:
