--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,8 +71,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-assets:
+  assets:
     - assets/images/wrEnhanced.jpg
+    - assets/images/background.jpg
   
 
 
