--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+7
+#iOS Version
+version: 1.0.0+8
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -34,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  pay: ^1.0.11
   shared_preferences: ^2.0.15
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.2
@@ -45,6 +45,8 @@ dependencies:
   path_provider_android: ^2.0.21
   path_provider_ios: ^2.0.11
   html: ^0.15.1
+  camera: ^0.10.0+5
+  google_mlkit_text_recognition: ^0.5.0
 
 dev_dependencies:
   flutter_test:
