--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   html: ^0.15.1
   camera: ^0.10.0+5
   google_mlkit_text_recognition: ^0.5.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
