--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   path_provider_ios: ^2.0.11
   html: ^0.15.1
   camera: ^0.10.0+5
-  google_mlkit_text_recognition: ^0.5.0
+  # google_mlkit_text_recognition: ^0.5.0
   google_fonts: ^4.0.1
 
 dev_dependencies:
